--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,83 @@
+@font-face {
+  font-family: Pano Trial;
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+  src: url(https://cdn.thegameawards.com/frontend/fonts/PanoTrial-Light.woff2) format("woff2"),url(https://cdn.thegameawards.com/frontend/fonts/PanoTrial-Light.woff) format("woff")
+}
+
+@font-face {
+  font-family: Pano Trial;
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+  src: url(https://cdn.thegameawards.com/frontend/fonts/PanoTrial-Regular.woff2) format("woff2"),url(https://cdn.thegameawards.com/frontend/fonts/PanoTrial-Regular.woff) format("woff")
+}
+
+@font-face {
+  font-family: Pano Trial;
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+  src: url(https://cdn.thegameawards.com/frontend/fonts/PanoTrial-Bold.woff2) format("woff2"),url(https://cdn.thegameawards.com/frontend/fonts/PanoTrial-Bold.woff) format("woff")
+}
+
+@font-face {
+  font-family: PP Formula;
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+  src: url(https://cdn.thegameawards.com/frontend/fonts/PPFormula-CondensedBlack.woff2) format("woff2"),url(https://cdn.thegameawards.com/frontend/fonts/PPFormula-CondensedBlack.woff) format("woff")
+}
+
+@font-face {
+  font-family: PP Formula;
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+  src: url(https://cdn.thegameawards.com/frontend/fonts/PPFormula-CondensedBold.woff2) format("woff2"),url(https://cdn.thegameawards.com/frontend/fonts/PPFormula-CondensedBold.woff) format("woff")
+}
+
+@font-face {
+  font-family: PP Formula;
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+  src: url(https://cdn.thegameawards.com/frontend/fonts/PPFormula-CondensedSemibold.woff2) format("woff2"),url(https://cdn.thegameawards.com/frontend/fonts/PPFormula-CondensedSemibold.woff) format("woff")
+}
+
+@font-face {
+  font-family: PP Formula;
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+  src: url(https://cdn.thegameawards.com/frontend/fonts/PPFormula-CondensedMedium.woff2) format("woff2"),url(https://cdn.thegameawards.com/frontend/fonts/PPFormula-CondensedMedium.woff) format("woff")
+}
+
+@font-face {
+  font-family: PP Formula;
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+  src: url(https://cdn.thegameawards.com/frontend/fonts/PPFormula-CondensedRegular.woff2) format("woff2"),url(https://cdn.thegameawards.com/frontend/fonts/PPFormula-CondensedRegular.woff) format("woff")
+}
+
+@font-face {
+  font-family: PP Formula sc;
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+  src: url(https://cdn.thegameawards.com/frontend/fonts/PPFormula-SemiCondensedSemibold.woff2) format("woff2"),url(https://cdn.thegameawards.com/frontend/fonts/PPFormula-SemiCondensedSemibold.woff) format("woff")
+}
+
+@font-face {
+  font-family: PP Formula sc;
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+  src: url(https://cdn.thegameawards.com/frontend/fonts/PPFormula-SemiCondensedRegular.woff2) format("woff2"),url(https://cdn.thegameawards.com/frontend/fonts/PPFormula-SemiCondensedRegular.woff) format("woff")
+}
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -83,6 +163,12 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  height: 100%;
+  background-color: #000;
+}
+
+#__next {
+  height: 100%;
 }
 
 
