--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -41,3 +41,19 @@
     color: #fff;
     font-family: PP Formula,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
 }
+.nomination {
+    margin-top: 24px;
+    font-family: Qingke;
+    color: #fff;
+}
+.nominateText {
+    font-size: 20px;
+    font-weight: 500;
+    padding: 0 6px;
+}
+.nominee {
+    margin-top: 10px;
+    text-align: right;
+    font-size: 16px;
+    opacity: .7;
+}
