--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,43 @@
 @font-face {
+  font-family: XiaoWei;
+  src: url(/ZCOOLXiaoWei-Regular.ttf) format("truetype")
+}
+@font-face {
+  font-family: QingKe;
+  src: url(/ZCOOLQingKeHuangYou-Regular.ttf) format("truetype")
+}
+
+@font-face {
+  font-family: Noto Serif;
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+  src: url(/Noto_Serif_SC/NotoSerifSC-Light.otf) format("opentype")
+}
+@font-face {
+  font-family: Noto Serif;
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+  src: url(/Noto_Serif_SC/NotoSerifSC-Regular.otf) format("opentype")
+}
+@font-face {
+  font-family: Noto Serif;
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+  src: url(/Noto_Serif_SC/NotoSerifSC-Medium.otf) format("opentype")
+}
+@font-face {
+  font-family: Noto Serif;
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+  src: url(/Noto_Serif_SC/NotoSerifSC-Bold.otf) format("opentype")
+}
+
+
+@font-face {
   font-family: Pano Trial;
   font-weight: 300;
   font-style: normal;
