--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -32,6 +32,14 @@
     padding: 7px;
     animation: gradient 15s ease 0s infinite normal none running;
 }
+.horizon {
+    width: 300px;
+    min-height: 100px;
+}
+
+.horizon .imageContainer {
+    min-height: 100px;
+}
 .gameName {
     width: 100%;
     height: 50px;
